--- a/html-elements/lifearFooter.html
+++ b/html-elements/lifearFooter.html
@@ -1,5 +1,5 @@
 <div class="footer black" style="padding-top: 25px;">
-    <a class="semi-large lifearBackground right" href="https://play.google.com/store/apps/details?id=com.holoeducate.apps.lifear"><img class="appStoreButton" alt="Get it on Google Play" src="../Resources/universal/google-play-btn.svg"></a>
-    <a class="semi-large2 lifearBackground left" href="https://itunes.apple.com/us/app/lifear/id1360644585?ls=1&mt=8"><img class="appStoreButton" alt="Get it on the App Store" src="../Resources/universal/app-store-btn.svg"></a>
+    <a class="semi-large lifearBackground right" href="https://play.google.com/store/apps/details?id=com.holoeducate.apps.lifear"><img class="appStoreButton" alt="Get it on Google Play" src="Resources/universal/google-play-btn.svg"></a>
+    <a class="semi-large2 lifearBackground left" href="https://itunes.apple.com/us/app/lifear/id1360644585?ls=1&mt=8"><img class="appStoreButton" alt="Get it on the App Store" src="Resources/universal/app-store-btn.svg"></a>
 </div>
 
