--- a/html-elements/oneAppFooter.html
+++ b/html-elements/oneAppFooter.html
@@ -1,5 +1,5 @@
 <div class="footer">
     <h2 class="connectText text-blue">Download today</h2>
-    <a class="socialButton large noBackground" href="https://play.google.com/store/apps/details?id=apps.daniel.com.slappysandwich"><img class="appStoreButton" alt="Get it on Google Play" src="../Resources/universal/google-play-btn.svg"></a>
+    <a class="socialButton large noBackground" href="https://play.google.com/store/apps/details?id=apps.daniel.com.slappysandwich"><img class="appStoreButton" alt="Get it on Google Play" src="Resources/universal/google-play-btn.svg"></a>
 </div>
 
