--- a/lifear_business.html
+++ b/lifear_business.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DGApps - LifeAR</title>
-    <link rel="shortcut icon" type="image/png" href="../Resources/universal/logo.png"/>
+    <link rel="shortcut icon" type="image/png" href="Resources/universal/logo.png"/>
 </head>
 <body>
     <!-- template -->
@@ -15,7 +15,7 @@
     <script >
         $("#header").load("html-elements/header.html",function() {
             $(".headerTitle").text("LifeAR");
-            $(".headerImage").attr("src","../Resources/pages/lifear/LifeARLogo.png");
+            $(".headerImage").attr("src","Resources/pages/lifear/LifeARLogo.png");
             $(".headerLogo").remove();
             $(".headerSubtitle").text("Ready To Discover AR?");
         });
@@ -32,17 +32,17 @@
         </div>
         <div class="TwoColumnSection">
             <div class="Section">
-                <img class="icon small" src="../Resources/pages/lifear/discover.svg">
+                <img class="icon small" src="Resources/pages/lifear/discover.svg">
                 <h2 class="text-blue">1. Discover</h2>
                 <p style="margin-top:0;">Point your device at any material that is part of the LifeAR database</p>
             </div>
             <div class="Section">
-                <img class="icon small" src="../Resources/pages/lifear/info.svg">
+                <img class="icon small" src="Resources/pages/lifear/info.svg">
                 <h2 class="text-blue">2. Learn more</h2>
                 <p style="margin-top:0;">Watch 3D models, videos, images, websites and more appear</p>
             </div>
             <div class="Section">
-                <img class="icon small" src="../Resources/pages/lifear/share.svg">
+                <img class="icon small" src="Resources/pages/lifear/share.svg">
                 <h2 class="text-blue">3. Share & Save</h2>
                 <p style="margin-top:0;">Save the content for later or share it with friends</p style="margin-top:0;">
             </div>
@@ -66,43 +66,43 @@
                     </tr>
                     <tr>
                         <td>Interactivity</td>
-                        <td class="lifearColumn"><img class="tableIcon" src="../Resources/pages/lifear/checkmark.svg"></td>
-                        <td><img class="tableIcon" src="../Resources/pages/lifear/x.svg"></td>
+                        <td class="lifearColumn"><img class="tableIcon" src="Resources/pages/lifear/checkmark.svg"></td>
+                        <td><img class="tableIcon" src="Resources/pages/lifear/x.svg"></td>
                     </tr>
                     <tr>
                         <td>Effects, hidden content, etc.</td>
-                        <td class="lifearColumn"><img class="tableIcon" src="../Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
-                        <td><img class="tableIcon" src="../Resources/pages/lifear/x.svg"></td>
+                        <td class="lifearColumn"><img class="tableIcon" src="Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
+                        <td><img class="tableIcon" src="Resources/pages/lifear/x.svg"></td>
                     </tr>
                     <tr>
                         <td>Links to websites</td>
-                        <td class="lifearColumn"><img class="tableIcon" src="../Resources/pages/lifear/checkmark.svg"></td>
-                        <td><img class="tableIcon" src="../Resources/pages/lifear/x.svg"></td>
+                        <td class="lifearColumn"><img class="tableIcon" src="Resources/pages/lifear/checkmark.svg"></td>
+                        <td><img class="tableIcon" src="Resources/pages/lifear/x.svg"></td>
                     </tr>
                     <tr>
                         <td>Buttons</td>
-                        <td class="lifearColumn"><img class="tableIcon" src="../Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
-                        <td><img class="tableIcon" src="../Resources/pages/lifear/x.svg"></td>
+                        <td class="lifearColumn"><img class="tableIcon" src="Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
+                        <td><img class="tableIcon" src="Resources/pages/lifear/x.svg"></td>
                     </tr>
                     <tr>
                         <td>Tracking</td>
-                        <td class="lifearColumn"><img class="tableIcon" src="../Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
-                        <td><img class="tableIcon" src="../Resources/pages/lifear/x.svg"></td>
+                        <td class="lifearColumn"><img class="tableIcon" src="Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
+                        <td><img class="tableIcon" src="Resources/pages/lifear/x.svg"></td>
                     </tr>
                     <tr>
                         <td>Quick Content Swapping</td>
-                        <td class="lifearColumn"><img class="tableIcon" src="../Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
-                        <td><img class="tableIcon" src="../Resources/pages/lifear/x.svg"></td>
+                        <td class="lifearColumn"><img class="tableIcon" src="Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
+                        <td><img class="tableIcon" src="Resources/pages/lifear/x.svg"></td>
                     </tr>
                     <tr>
                         <td>Download and watch later</td>
-                        <td class="lifearColumn"><img class="tableIcon" src="../Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
-                        <td><img class="tableIcon" src="../Resources/pages/lifear/x.svg"></td>
+                        <td class="lifearColumn"><img class="tableIcon" src="Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
+                        <td><img class="tableIcon" src="Resources/pages/lifear/x.svg"></td>
                     </tr>
                     <tr>
                         <td>Share with remote friends</td>
-                        <td class="lifearColumn last"><img class="tableIcon" src="../Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
-                        <td><img class="tableIcon" src="../Resources/pages/lifear/x.svg"></td>
+                        <td class="lifearColumn last"><img class="tableIcon" src="Resources/pages/lifear/checkmark.svg"></td class="lifearColumn">
+                        <td><img class="tableIcon" src="Resources/pages/lifear/x.svg"></td>
                     </tr>
                 </table>
             </div>
