--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DGApps - Portfolio</title>
-    <link rel="shortcut icon" type="image/png" href="../Resources/universal/logo.png"/>
+    <link rel="shortcut icon" type="image/png" href="Resources/universal/logo.png"/>
 </head>
 <body>
     <!-- template -->
@@ -15,7 +15,7 @@
     <script >
         $("#header").load("html-elements/header.html",function() {
             $(".headerTitle").text("Portfolio");
-            $(".headerImage").attr("src","../Resources/universal/logo.png");
+            $(".headerImage").attr("src","Resources/universal/logo.png");
             $(".headerLogo").remove();
             $(".headerSubtitle").remove();
         });
@@ -28,11 +28,11 @@
         <div id="serviceSection" class="Section">
             <h2 class="text-blue">Services</h2>
             <div class="row">
-                <img class="icon smallIcons rowItem" src="../Resources/pages/portfolio/services_app.png">
-                <img class="icon smallIcons rowItem" src="../Resources/pages/portfolio/services_game.png">
-                <img class="icon smallIcons rowItem" src="../Resources/pages/portfolio/services_web.png">
-                <img class="icon smallIcons rowItem" src="../Resources/pages/portfolio/services_imgvid.png">
-                <img class="icon smallIcons rowItem" src="../Resources/pages/portfolio/services_3d.png">
+                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_app.png">
+                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_game.png">
+                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_web.png">
+                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_imgvid.png">
+                <img class="icon smallIcons rowItem" src="Resources/pages/portfolio/services_3d.png">
             </div>
             <a class="button btn-blue" href="contact.html">Request a service</a>
         </div>
@@ -48,19 +48,19 @@
                 <h2 class="text-blue">Featured Projects</h2>
                 <div class="row">
                     <div class="appButton blue-border">
-                        <img class="appLogo" src="../Resources/pages/lifear/LifeARLogo.png">
+                        <img class="appLogo" src="Resources/pages/lifear/LifeARLogo.png">
                         <h3>LifeAR</h3>
                         <p>Modernizing traditional print media into dynamic customer engagement tools</p>
                         <a class="button btn-blue" href="lifear.html">Learn More</a>
                     </div>
                     <div class="appButton red-border">
-                            <img class="appLogo" src="../Resources/pages/portfolio/SlappySandwichLogo.png">
+                            <img class="appLogo" src="Resources/pages/portfolio/SlappySandwichLogo.png">
                             <h3>Slappy Sandwich</h3>
                             <p>Slap it till you drop it</p>
                             <a class="button btn-red" href="slappy-sandwich.html">Learn More</a>
                     </div>
                     <div class="appButton blue-border">
-                            <img class="appLogo" src="../Resources/pages/handtrack/HandTrackLogo.png">
+                            <img class="appLogo" src="Resources/pages/handtrack/HandTrackLogo.png">
                             <h3>HandTrack</h3>
                             <p>Reimagining a Mouse-free world</p>
                             <a class="button btn-blue" href="handtrack.html">Learn More</a>
@@ -72,17 +72,17 @@
                 <h2 class="text-blue">Some Other Projects</h2>
                 <div class="row">
                     <div class="appButton blue-border">
-                        <img class="appLogo" src="../Resources/pages/portfolio/WalkCamLogo.png">
+                        <img class="appLogo" src="Resources/pages/portfolio/WalkCamLogo.png">
                         <h3>WalkCam</h3>
                         <a class="button btn-blue" href="https://play.google.com/store/apps/details?id=apps.daniel.com.walkcam">Learn More</a>
                     </div>
                     <div class="appButton red-border">
-                            <img class="appLogo" src="../Resources/pages/portfolio/DodgeVRLogo.png">
+                            <img class="appLogo" src="Resources/pages/portfolio/DodgeVRLogo.png">
                             <h3>DodgeVR</h3>
                             <a class="button btn-red" href="https://play.google.com/store/apps/details?id=apps.daniel.com.dodgevr">Learn More</a>
                     </div>
                     <div class="appButton blue-border">
-                            <img class="appLogo" src="../Resources/pages/portfolio/TouchLockLogo.png">
+                            <img class="appLogo" src="Resources/pages/portfolio/TouchLockLogo.png">
                             <h3>Touch Lock</h3>
                             <a class="button btn-blue" href="https://play.google.com/store/apps/details?id=apps.daniel.com.touchlock">Learn More</a>
                     </div>
@@ -93,17 +93,17 @@
                 <h2 class="text-blue">Some Collaborative Projects</h2>
                 <div class="row">
                     <div class="appButton blue-border">
-                            <img class="appLogo" src="../Resources/pages/portfolio/crystalClear.png">
+                            <img class="appLogo" src="Resources/pages/portfolio/crystalClear.png">
                             <h3>Crystal Clear Goal Setting</h3>
                             <a class="button btn-blue" href="https://crystalcleargoals.com/">Learn More</a>
                     </div>
                     <div class="appButton teal-border">
-                        <img class="appLogo" src="../Resources/pages/portfolio/selc.png">
+                        <img class="appLogo" src="Resources/pages/portfolio/selc.png">
                         <h3>S.E.L.C.</h3>
                         <a class="button btn-teal" href="https://selc.ed.brocku.ca/">Learn More</a>
                     </div>
                     <div class="appButton blue-border">
-                            <img class="appLogo" src="../Resources/pages/portfolio/powersuit.png">
+                            <img class="appLogo" src="Resources/pages/portfolio/powersuit.png">
                             <h3>The PowerSuit</h3>
                             <a class="button btn-blue" href="https://thepowersuit.com/">Learn More</a>
                     </div>
