Fixed image paths issue

--- a/html-elements/header.html
+++ b/html-elements/header.html
@@ -1,6 +1,6 @@
 <div class="header">
-    <image class="headerLogo" src="Resources/universal/DGApps_white.png"/>
+    <image class="headerLogo" src="../Resources/universal/DGApps_white.png"/>
     <h1 class="headerTitle">DGApps</h1>
     <h2 class="headerSubtitle">Ideas Infinity</h2>
-    <image class="headerImage" src="Resources/universal/headerImage.svg"/>
+    <image class="headerImage" src="../Resources/universal/headerImage.svg"/>
 </div>
