--- a/html-elements/twoAppFooter.html
+++ b/html-elements/twoAppFooter.html
@@ -1,6 +1,6 @@
 <div class="footer" style="padding-top: 25px;">
     <h2 class="connectText">Download Today</h2>
-    <a class="socialButton semi-large noBackground" href="https://play.google.com/store/apps/details?id=apps.daniel.com.slappysandwich"><img class="appStoreButton" alt="Get it on Google Play" src="Resources/universal/google-play-btn.svg"></a>
-    <a class="socialButton semi-large2 noBackground" href="https://itunes.apple.com/ca/app/slappy-sandwich/id1355533822?mt=8"><img class="appStoreButton" alt="Get it on the App Store" src="Resources/universal/app-store-btn.svg"></a>
+    <a class="socialButton semi-large noBackground" href="https://play.google.com/store/apps/details?id=apps.daniel.com.slappysandwich"><img class="appStoreButton" alt="Get it on Google Play" src="../Resources/universal/google-play-btn.svg"></a>
+    <a class="socialButton semi-large2 noBackground" href="https://itunes.apple.com/ca/app/slappy-sandwich/id1355533822?mt=8"><img class="appStoreButton" alt="Get it on the App Store" src="../Resources/universal/app-store-btn.svg"></a>
 </div>
 
