Haha, that was a joke. Now it is actually fixed

--- a/html-elements/superFooter.html
+++ b/html-elements/superFooter.html
@@ -1,4 +1,4 @@
 <div class="superFooter blue">
-    <img src="./Resources/universal/DGApps_white.png" class="footerIcon">
+    <img src="Resources/universal/DGApps_white.png" class="footerIcon">
     <h5 class="footerText">DGApps</h5>
 </div>
