--- a/lifear_business.html
+++ b/lifear_business.html
@@ -128,7 +128,7 @@
                     <div id="pricingLarge"></div>
                 </div>
                 <div id="pricingCustom"></div>
-                <div class="TwoColumnSection pricingTable">
+                <div class="TwoColumnSection pricingTable custom">
                     <h3 class="text-blue">Included:</h3>
                     <ul>
                         <li style="text-align: left;">Unlimited free swapping</li>
