--- a/handtrack.html
+++ b/handtrack.html
@@ -67,9 +67,8 @@
             $(".carousel").addClass("blue");
             $(".arrow").addClass("blue");
             $(".carousel").append("<video id=\"firstSlide\" class=\"video slides\" controls><source src=\"Resources/pages/handtrack/website.mp4\" type=\"video/mp4\">Video not supported</video>");
-            $("#firstSlide").show();
+            $("#firstSlide").css( "display", "grid" );
             $(".carousel").append("<video class=\"video slides\" controls><source src=\"Resources/pages/handtrack/wear.mp4\" type=\"video/mp4\">Video not supported</video>");
-        
             $(".carousel").append("<img class=\"slides\" src=\"Resources/pages/handtrack/airmouse.png\">")
                           .append("<img class=\"slides\" src=\"Resources/pages/handtrack/joystick.png\">")
                           .append("<img class=\"slides\" src=\"Resources/pages/handtrack/settings.png\">")
