Second Update - fixes a ton of issues with scaling and animations

--- a/handtrack.html
+++ b/handtrack.html
@@ -67,7 +67,7 @@
             $(".carousel").addClass("blue");
             $(".arrow").addClass("blue");
             $(".carousel").append("<video id=\"firstSlide\" class=\"video slides\" controls><source src=\"Resources/pages/handtrack/website.mp4\" type=\"video/mp4\">Video not supported</video>");
-            $("#firstSlide").css( "display", "grid" );
+                $("#firstSlide").addClass("showing");
             $(".carousel").append("<video class=\"video slides\" controls><source src=\"Resources/pages/handtrack/wear.mp4\" type=\"video/mp4\">Video not supported</video>");
             $(".carousel").append("<img class=\"slides\" src=\"Resources/pages/handtrack/airmouse.png\">")
                           .append("<img class=\"slides\" src=\"Resources/pages/handtrack/joystick.png\">")
