--- a/lifear.html
+++ b/lifear.html
@@ -17,8 +17,8 @@
   <!-- main content -->
   <div id="lifeARSplashContent">
     <h1 id="title1" class="title">Are You Ready To Discover AR?</h1>
-    <a id="button1" class="button btn-blue" href="lifear_consumer.html">User</a>
-    <a id="button2" class="button btn-blue" href="lifear_business.html">Content Owner</a>
+    <a id="button1" class="button btn-blue inverseButton" href="lifear_consumer.html">User</a>
+    <a id="button2" class="button btn-blue inverseButton" href="lifear_business.html">Content Owner</a>
     <h1 id="title2" class="title">...And Foster A Paperless World</h1>
   </div>
   <!-- main content ends -->
