--- a/slappy-sandwich.html
+++ b/slappy-sandwich.html
@@ -69,7 +69,7 @@
             $(".carousel").addClass("red");
             $(".arrow").addClass("red");
             $(".carousel").append("<video id=\"firstSlide\" class=\"video slides red\" controls><source src=\"Resources/pages/slappy-sandwich/slappysandwichpromo.mp4\" type=\"video/mp4\">Video not supported</video>");
-            $("#firstSlide").css( "display", "grid" );
+            $("#firstSlide").addClass("showing");
             $(".carousel").append("<img class=\"slides red\" src=\"Resources/pages/slappy-sandwich/promoGame.jpg\">")
             .append("<img class=\"slides red\" src=\"Resources/pages/slappy-sandwich/promoRules.jpg\">")
             .append("<img class=\"slides red\" src=\"Resources/pages/slappy-sandwich/promoLast.jpg\">");
