--- a/html-elements/carousel.html
+++ b/html-elements/carousel.html
@@ -1,32 +1,51 @@
 <script>
-    var slideIndex = 1;
-    showDivs(slideIndex);
-    
-    function plusDivs(n) {
-        showDivs(slideIndex += n);
-    }
-    
-    function showDivs(n) {
-      var i;
-      var x = document.getElementsByClassName("slides");
-      if (n > x.length) {
-          slideIndex = 1;
-      }
-      else if (n < 1) {
-          slideIndex = x.length;
-      }
-      for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none";  
-        if (x[i].className.includes("video")){
-            x[i].pause();
-        }
-      }
-      x[slideIndex-1].style.display = "grid";
-    }
-</script>
+var i = 0;
+var slides = $(".slides");
 
+$(document).ready(function() {
+    slides = $(".slides");
+});
+
+$("#left").click(function(){
+    switchSlides(-1);
+});
+
+$('#right').click(function(){
+    switchSlides(1);
+});
+
+function switchSlides(amount){
+    var currentSlide = slides[i];
+
+    if ($(currentSlide).hasClass("video")){
+        $(currentSlide).get(0).pause();
+    }
+
+    i += amount;
+
+    if (i > slides.length-1){
+        i = 0;
+    }else if (i < 0){
+        i = slides.length-1;
+    }
+
+    var nextSlide = $(".slides")[i];
+
+    $(currentSlide).animate({
+       maxWidth: '0vw'
+    }, { duration: 250, queue: false, complete: function() {
+        $(currentSlide).hide();
+    }});
+
+    $(nextSlide).show();
+    $(nextSlide).animate({
+       maxWidth: '50vw'
+    }, { duration: 250, queue: false });
+}
+
+</script>
 <div class="carousel">
-    <button class="slideButton left" id="left" onclick="plusDivs(-1)">
+    <button class="slideButton left" id="left">
         <svg viewBox="0 0 108 140" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="arrow" d="M23.6,87.1c-10-8.8-10-24.3,0-33.1l31.6-27.9c14.3-12.6,36.7-2.5,36.7,16.6v55.8c0,19-22.4,29.1-36.7,16.6,L23.6,87.1z" fill="white"></path>
         </svg>
@@ -34,7 +53,7 @@
 
     <!-- add some images via jquery when loading into the pages -->
 
-    <button class="slideButton right" id="right" onclick="plusDivs(1)">
+    <button class="slideButton right" id="right">
         <svg viewBox="0 0 108 140" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path class="arrow" d="M84.4,53.9c10,8.8,10,24.3,0,33.1l-31.6,27.9c-14.3,12.6-36.7,2.5-36.7-16.6V42.6c0-19,22.4-29.1,36.7-16.6,L84.4,53.9z" fill="white"></path>
         </svg>
