--- a/html-elements/pricing-table.html
+++ b/html-elements/pricing-table.html
@@ -1,10 +1,10 @@
 <div class="pricingTable">
     <h2 class="planTitle text-blue">The Blah Plan</h2>
     <p class="description">blah blah blah</p>
-    <p class="numImgs text-blue">1</p>
+    <h1 class="numImgs text-blue">1</h1>
     <p class="imgTarget">Image Targets</p>
-    <p class="numVids text-blue">1</p>
+    <h1 class="numVids text-blue">1</h1>
     <p class="vidTarget">Video Targets</p>
-    <h3 class="price">$10</h3>
+    <h2 class="price">$10</h2>
     <h5 class="priceAfter">/month</h5>
 </div>
