--- a/lifear-faq.html
+++ b/lifear-faq.html
@@ -71,7 +71,7 @@
             $(".arrow").addClass("blue");
 
             $(".carousel").append("<h2 id=\"firstSlide\" class=\"slides\">For best results, please make sure that the image is clear and big enough in your viewfinder</h2>");
-            $("#firstSlide").css( "display", "grid" );
+            $("#firstSlide").addClass("showing");
             $(".carousel").append("<h2 class=\"slides\">If it is too dark, turn on the flashlight (white menu in bottom right corner of the screen and click the flashlight)</h2>")
                           .append("<h2 class=\"slides\">If you want to see something up close, pinch your fingers on the screen too zoom</h2>")
                           .append("<h2 class=\"slides\">If you want to watch a longer video but don't want to see it in AR, click the fullscreen button (in the white menu in the right bottom corner of the screen)</h2>")
