Updated LifeAR pages and improves scaling

--- a/html-elements/nav.html
+++ b/html-elements/nav.html
@@ -7,19 +7,19 @@
 	</span>
 </label>
 <nav id="menu">
-	<ul id="list" style="list-style: none;">
-      <li class="myList"><a class="menuLink" href="index.html">Home</a></li>
-      <li class="myList"><a class="menuLink" href="lifear.html">LifeAR</a>
-        <ul id="innerMenu"style="list-style: none;">
-          <li class="myList"><a class="innerMenuLink" href="lifear-gallery.html">Gallery</a></li>
-          <li class="myList"><a class="innerMenuLink" href="lifear_business.html#Pricing">Pricing</a></li>
-          <li class="myList"><a class="innerMenuLink" href="lifear-faq.html">Help/FAQ</a></li>
-          <li class="myList"><a class="innerMenuLink" href="lifear-legal.html">Legal</a></li>
+	<ul id="list">
+      <li><a class="navText" href="index.html">Home</a></li>
+      <li><a class="navText" href="lifear.html">LifeAR</a>
+        <ul class="innerMenu">
+          <li><a class="navTextInner" href="lifear-gallery.html">Gallery</a></li>
+          <li><a class="navTextInner" href="lifear_business.html#Pricing">Pricing</a></li>
+          <li><a class="navTextInner" href="lifear-faq.html">Help/FAQ</a></li>
+          <li><a class="navTextInner" href="lifear-legal.html">Legal</a></li>
         </ul>
 	    </li> 
-      <li class="myList"><a class="menuLink" href="portfolio.html">Portfolio</a></li>
-      <li class="myList"><a class="menuLink" href="contact.html">Contact</a></li>
-	  <li class="myList"><a class="menuLink" href="privacy-policies.html">Privacy Policies</a></li>
+      <li><a class="navText" href="portfolio.html">Portfolio</a></li>
+      <li><a class="navText" href="contact.html">Contact</a></li>
+	  <li><a class="navText" href="privacy-policies.html">Privacy Policies</a></li>
     </ul>
 </nav>
 
