--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <img src="Resources/pages/index/me-circle.png" class="ColumnImage leftAlign">
       <div>
         <h2 class="text-red">The Developer</h2>
-        <p class="rightCenter"></p>My name is Daniel Genkin and I am a McMaster University Computer Science
+        <p class="rightCenter">My name is Daniel Genkin and I am a McMaster University Computer Science
         student. Computer Science and software development are my passion and I am looking forward to pursuing a future
         in this field. Since entering high school, I have been developing this mobile app-based start-up venture,
         DGApps. I am interested in science and engineering and I aspire to create innovative and inspiring products.
