--- a/lifear_business.html
+++ b/lifear_business.html
@@ -49,6 +49,7 @@
         </div>
         <div class="Section">
             <h2 class="text-blue">What is AR</h2>
+            <video class="ColumnSVG" controls><source src="Resources/pages/lifear/lifear-demo.mp4" type="video/mp4">Video not supported</video>
             <p>
                 The power of augmented reality (AR) makes images, videos and 3D
                     models emerge from printed materials and become interactive. ​
@@ -106,13 +107,28 @@
                     </tr>
                 </table>
             </div>
-            <div class="Section" id="AddingTargets">
-                <h2 class="text-blue">How does it work</h2>
-                <div class="Section">
-                    <p>put a video here showing how ti works (UI demo)</p>
-                    <a href="instructions page" class="button btn-blue">Written Instructions</a>
-                </div>
-                <div class="TwoColumnSection">
+            <div class="Section" id="AddingTargets">                
+                <div id="DevSection" class="TwoColumnSection">
+                    <img src="Resources/pages/lifear/how_to_manage_targets.png" class="leftAlign">
+                    <div>
+                      <h2 class="text-blue">Single Click Target Management</h2>
+                      <p class="rightCenter">
+                          All target/content manipulation is done via the LifeAR app. This simplifies the process and allows you to easily add or remove your targets quickly and easily. Just tap the garbage can to delete or the Add Target button to add a new target.
+                      </p>
+                    </div>
+                  </div>
+
+                  <div id="DevSection" class="TwoColumnSection">
+                    <div>
+                      <h2 class="text-blue">Load Targets From Anywhere</h2>
+                      <p class="rightCenter">
+                         LifeAR's content management approach allows for adding content and targets from your favourite Cloud storage providers (i.e. Google Drive) as well as straight from your phone.
+                      </p>
+                    </div>
+                    <img src="Resources/pages/lifear/locations_to_add_from.png" class="leftAlign">
+                  </div>
+
+                 <div class="TwoColumnSection">
                     <a style="width: 100%" href="lifear-faq.html" class="button btn-blue">FAQ</a>
                     <a style="width: 100%" href="lifear-gallery.html" class="button btn-blue">Gallery</a>
                 </div>
