--- a/lifear_consumer.html
+++ b/lifear_consumer.html
@@ -49,17 +49,15 @@
                 <p style="margin-top:0;">Save the content for later or share it with friends</p style="margin-top:0;">
             </div>
         </div>
-        <div class="TwoColumnSection">
-            <img class="ColumnSVG leftAlign" src="Resources/pages/lifear/phoneScanning.svg">
-            <div>
-                <h2 class="text-blue">What is AR</h2>
-                <p>
-                    The power of augmented reality (AR) makes images, videos and 3D
-                    models emerge from printed materials and become interactive. ​
-                    Imagine user manuals or informational flyers with embedded customized videos or 3D models.
-                    With AR, you can make everything around you interactive!
-                </p>
-            </div>
+        <div class="Section">
+            <h2 class="text-blue">What is AR</h2>
+            <video class="ColumnSVG" controls><source src="Resources/pages/lifear/lifear-demo.mp4" type="video/mp4">Video not supported</video>
+            <p>
+                The power of augmented reality (AR) makes images, videos and 3D
+                models emerge from printed materials and become interactive. ​
+                Imagine user manuals or informational flyers with embedded customized videos or 3D models.
+                With AR, you can make everything around you interactive!
+            </p>
         </div>
         <div class="TwoColumnSection">
             <a style="width: 100%" href="lifear-faq.html" class="button btn-blue">FAQ</a>
