--- a/slappy-sandwich.html
+++ b/slappy-sandwich.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html class="red">
 <head>
     <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="scss/main.css">
